<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tic Tac Toe</string>

    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="HomeTitle">Tic Tac Toe</string>
    <string name="PlayButton">Start!</string>
    <string name="playerEntry">Enter Details</string>
    <string name="player1">Player 1 Name (X)</string>
    <string name="player2">Player 2 Name (O)</string>
    <string name="hintp1">Enter Player 1 Name</string>
    <string name="hintp2">Enter Player 2 Name</string>
    <string name="submitNames">Submit Details</string>
    <string name="garbage">-1</string>
    <string name="Restart">Restart</string>
    <string name="SameNames">Change Details?</string>
    <string name="Rules">Rules</string>
    <string name="rules1">1. The game is played on a grid that\'s 3 squares by 3 squares.</string>
    <string name="rules2">2. A player is either allowed to play X or O. Players take turns putting their marks in empty squares.</string>
    <string name="rules3">3. The first player to get 3 of her marks in a row (up, down, across, or diagonally) is the winner.</string>
    <string name="rules4">4. When all 9 squares are full, the game is over. If no player has 3 marks in a row, the game ends in a tie.</string>
    <string name="playerVsplayer">Player vs Player</string>
    <string name="playerVsbot">Player vs Bot</string>

    <string name="PlayerNameBot">Enter Player Name</string>
    <string name="Turn1">Player plays X</string>
    <string name="Turn2">Player plays O</string>
    <string name="BotLevelSelect">Difficulty Level of Bot</string>
    <string name="easy">Beginner</string>
    <string name="Hard">Expert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="made_by_tejas_parse">Made by Tejas Parse</string>
</resources>