<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity"
    android:background="@color/background">


    <TextView
        android:id="@+id/Rules_ActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/neon_button"
        android:fontFamily="@font/audiowide"
        android:padding="20dp"
        android:text="@string/Rules"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <ScrollView
        android:layout_width="372dp"
        android:layout_height="429dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <LinearLayout
            android:id="@+id/Rules_Linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rule1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@drawable/commands"
                android:fontFamily="@font/bubblegum_sans"
                android:padding="15dp"
                android:text="@string/rules1"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/rule2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@drawable/commands"
                android:fontFamily="@font/bubblegum_sans"
                android:padding="15dp"
                android:text="@string/rules2"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/rule3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@drawable/commands"
                android:fontFamily="@font/bubblegum_sans"
                android:padding="15dp"
                android:text="@string/rules3"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/rule4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/commands"
                android:fontFamily="@font/bubblegum_sans"
                android:padding="15dp"
                android:text="@string/rules4"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>